--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "AttestationCovid19",
-  "displayName": "Attestation COVID-19"
+  "name": "AttestationDeplacementDerogatoire",
+  "displayName": "Attestation déplacement dérogatoire"
 }
 
