--- a/ios/AttestationDeplacementDerogatoire.xcodeproj/xcshareddata/xcschemes/AttestationDeplacementDerogatoire-tvOS.xcscheme
+++ b/ios/AttestationDeplacementDerogatoire.xcodeproj/xcshareddata/xcschemes/AttestationDeplacementDerogatoire-tvOS.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "AttestationCovid19.app"
-               BlueprintName = "AttestationCovid19"
-               ReferencedContainer = "container:AttestationCovid19.xcodeproj">
+               BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
+               BuildableName = "AttestationDeplacementDerogatoire-tvOS.app"
+               BlueprintName = "AttestationDeplacementDerogatoire-tvOS"
+               ReferencedContainer = "container:AttestationDeplacementDerogatoire.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AttestationCovid19Tests.xctest"
-               BlueprintName = "AttestationCovid19Tests"
-               ReferencedContainer = "container:AttestationCovid19.xcodeproj">
+               BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
+               BuildableName = "AttestationDeplacementDerogatoire-tvOSTests.xctest"
+               BlueprintName = "AttestationDeplacementDerogatoire-tvOSTests"
+               ReferencedContainer = "container:AttestationDeplacementDerogatoire.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -54,10 +54,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AttestationCovid19.app"
-            BlueprintName = "AttestationCovid19"
-            ReferencedContainer = "container:AttestationCovid19.xcodeproj">
+            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
+            BuildableName = "AttestationDeplacementDerogatoire-tvOS.app"
+            BlueprintName = "AttestationDeplacementDerogatoire-tvOS"
+            ReferencedContainer = "container:AttestationDeplacementDerogatoire.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -71,10 +71,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AttestationCovid19.app"
-            BlueprintName = "AttestationCovid19"
-            ReferencedContainer = "container:AttestationCovid19.xcodeproj">
+            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
+            BuildableName = "AttestationDeplacementDerogatoire-tvOS.app"
+            BlueprintName = "AttestationDeplacementDerogatoire-tvOS"
+            ReferencedContainer = "container:AttestationDeplacementDerogatoire.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
