--- a/ios/AttestationDeplacementDerogatoire/Info.plist
+++ b/ios/AttestationDeplacementDerogatoire/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>AttestationCovid19</string>
+	<string>AttestationDeplacementDerogatoire</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
