--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,11 +41,19 @@ def flipper_post_install(installer)
         config.build_settings['SWIFT_VERSION'] = '4.1'
       end
     end
+
+    # https://github.com/facebook/react-native/issues/28419
+    # Enable Flipper for simulators only
+    if target.name.start_with?('Flipper')
+      target.build_configurations.each do |config|
+        config.build_settings['VALID_ARCHS'] = 'arm64 arm64e'
+      end
+    end
   end
 end
 
-target 'AttestationCovid19' do
-  # Pods for AttestationCovid19
+target 'AttestationDeplacementDerogatoire' do
+  # Pods for AttestationDeplacementDerogatoire
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -77,7 +85,7 @@ target 'AttestationCovid19' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  target 'AttestationCovid19Tests' do
+  target 'AttestationDeplacementDerogatoireTests' do
     inherit! :complete
     # Pods for testing
   end
@@ -94,10 +102,10 @@ target 'AttestationCovid19' do
   end
 end
 
-target 'AttestationCovid19-tvOS' do
-  # Pods for AttestationCovid19-tvOS
+target 'AttestationDeplacementDerogatoire-tvOS' do
+  # Pods for AttestationDeplacementDerogatoire-tvOS
 
-  target 'AttestationCovid19-tvOSTests' do
+  target 'AttestationDeplacementDerogatoire-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
