set up ios icons

--- a/ios/AttestationDeplacementDerogatoire.xcodeproj/xcshareddata/xcschemes/AttestationDeplacementDerogatoire.xcscheme
+++ b/ios/AttestationDeplacementDerogatoire.xcodeproj/xcshareddata/xcschemes/AttestationDeplacementDerogatoire.xcscheme
@@ -60,6 +60,13 @@
             ReferencedContainer = "container:AttestationDeplacementDerogatoire.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "ENTRY_FILE"
+            value = "index.js"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
