--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "devDependencies": {
     "@babel/core": "^7.6.2",
     "@babel/runtime": "^7.6.2",
-    "@types/lodash": "^4.14.149",
     "@types/luxon": "^1.22.0",
     "@types/qrcode": "^1.3.4",
     "@types/react": "^16.9.34",
@@ -49,11 +48,11 @@
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/masked-view": "^0.1.8",
-    "lodash": "^4.17.15",
+    "@soywod/react-use-observable": "^0.0.1",
     "luxon": "^1.23.0",
     "pdf-lib": "^1.4.1",
-    "react": "16.11.0",
-    "react-captain": "^3.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-native": "0.62.2",
     "react-native-file-viewer": "^2.0.2",
     "react-native-fs": "^2.16.6",
