--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-file-viewer": "^2.0.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-in-app-review": "^2.1.2",
     "react-native-pdf": "^6.1.1",
     "react-native-qrcode-svg": "^6.0.3",
     "react-native-safe-area-context": "0.6.0",
