add multi-profiles feature

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,8 +134,9 @@ android {
         applicationId "com.attestationdeplacementderogatoire"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 8
-        versionName "1.7"
+        versionCode 9
+        versionName "1.8"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -228,6 +229,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation "com.android.support:multidex:1.0.3"
 }
 
 // Run this once to be able to run the application with BUCK
