--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/masked-view": "^0.1.8",
+    "@react-native-picker/picker": "^1.9.2",
+    "@react-navigation/material-top-tabs": "^5.3.2",
     "@react-navigation/native": "^5.8.2",
     "@react-navigation/stack": "^5.11.1",
     "@soywod/react-use-observable": "^0.0.1",
@@ -62,9 +64,11 @@
     "react-native-in-app-review": "^2.1.2",
     "react-native-pdf": "^6.1.1",
     "react-native-qrcode-svg": "^6.0.3",
+    "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "^2.4.0",
     "react-native-svg": "^12.1.0",
+    "react-native-tab-view": "^2.15.2",
     "rn-fetch-blob": "^0.12.0",
     "rxjs": "^6.5.5"
   },
