--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-native": "^0.63.3",
+    "react-native-exception-handler": "^2.10.9",
     "react-native-file-viewer": "^2.0.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
