--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/qrcode": "^1.3.4",
     "@types/react": "^16.9.34",
     "@types/react-native": "^0.62.2",
+    "@types/react-native-share": "^3.3.0",
+    "@types/react-native-vector-icons": "^6.4.6",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "babel-jest": "^24.9.0",
@@ -48,6 +50,7 @@
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/masked-view": "^0.1.8",
+    "@react-native-community/netinfo": "^5.9.7",
     "@react-native-picker/picker": "^1.9.2",
     "@react-navigation/material-top-tabs": "^5.3.2",
     "@react-navigation/native": "^5.8.2",
@@ -59,7 +62,6 @@
     "react-dom": "^17.0.1",
     "react-native": "^0.63.3",
     "react-native-exception-handler": "^2.10.9",
-    "react-native-file-viewer": "^2.0.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-in-app-review": "^2.1.2",
@@ -68,8 +70,10 @@
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "^2.4.0",
+    "react-native-share": "^4.1.0",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.15.2",
+    "react-native-vector-icons": "^7.1.0",
     "rn-fetch-blob": "^0.12.0",
     "rxjs": "^6.5.5"
   },
