--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/masked-view": "^0.1.8",
-    "@react-native-community/netinfo": "^5.9.7",
     "@react-native-picker/picker": "^1.9.2",
     "@react-navigation/material-top-tabs": "^5.3.2",
     "@react-navigation/native": "^5.8.2",
@@ -64,6 +63,7 @@
     "react-native-exception-handler": "^2.10.9",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-google-api-availability-bridge": "^1.3.0",
     "react-native-in-app-review": "^2.1.2",
     "react-native-pdf": "^6.1.1",
     "react-native-qrcode-svg": "^6.0.3",
