--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,8 +4,9 @@ buildscript {
     ext {
         buildToolsVersion = "28.0.3"
         minSdkVersion = 16
-        compileSdkVersion = 29
+        compileSdkVersion = 28
         targetSdkVersion = 29
+        supportLibVersion = "28.0.0"
     }
     repositories {
         google()
